--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
     <aside class="sidebar">
       <div class="profile">
         <div class="avatar">
-          <img src="assets/profile.jpg" alt="Foto de perfil">
+          <img src="assets/FOTO 2.jpeg" alt="Foto de perfil">
         </div>
         <div class="name">Kevin Anthony Naveros Ayquipa</div>
         <p class="role">Economía – PUCP · Retail & Commercial · Data/Analytics</p>
@@ -298,7 +298,8 @@
             </div>
             <div class="item">
               <h3>Educación</h3>
-              <p class="meta">PUCP — Economía (8vo ciclo) · IDAT — Especialización en Microsoft Excel</p>
+              <p class="meta">PUCP — Economía (8vo ciclo)</p>
+              <p class="meta">IDAT — Especialización en Microsoft Excel</p>
             </div>
           </section>
         </div>
@@ -437,7 +438,8 @@
         <section id="contact" class="card" style="margin-top:18px">
           <h2>Contact</h2>
           <div class="contactgrid">
-            <div class="contactbox"><b>Email</b><br><span>tuemail@dominio.com</span></div>
+            <div class="contactbox"><b>Email</b><br><span>kevinmaverick92@gmail.com</span></div>
+            <div class="contactbox"><b>Email</b><br><span>a20165881@pucp.edu.pe</span></div>
             <div class="contactbox"><b>GitHub</b><br><span>github.com/Naveros043011</span></div>
           </div>
           <div class="item">
